try to fix scrollbar on desktop 2

--- a/app/assets/stylesheets/ass1_styles.css
+++ b/app/assets/stylesheets/ass1_styles.css
@@ -63,7 +63,7 @@ textarea {
     text-align: center !important;
     line-height: 50px !important;
     resize: none !important;
-    white-space: nowrap !important!;
+    white-space: nowrap !important;
     overflow: hidden !important;
 }
 
